k8s/ejemplo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ejemplo
  labels:
    app: ejemplo
spec:
  selector:
    matchLabels:
      app: ejemplo
  template:
    metadata:
      labels:
        app: ejemplo
    spec:
      containers:
      - name: ejemplito
        image: danielsabana/vaca:1.4.0
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 200m
            memory: 500Mi
        #startupProbe:
         # httpGet:
          #  path: /saludo
           # port: 8081
         # initialDelaySeconds: 10
          #periodSeconds: 10
