k8s/ejemplo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ejemplo
spec:
  selector:
    app: ejemplo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 8081
