k8s/ejemplo-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: ejemplo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /lavaca(/|$)(.*)
        pathType: ImplementationSpecific
        service:
          name: ejemplo
          port:
            number: 9999
